--- a/src/main/resources/dbfh.properties
+++ b/src/main/resources/dbfh.properties
@@ -16,7 +16,7 @@ databaseName=fhadmin
 # 数据库用户名
 username=root
 # 数据库密码
-password=root
+password=123456
 # mysqldump 路径 Linux
 #dbpath = /usr/bin/
 # 备份文件存放位置 Linux
